Update security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.4",
+    "mini-css-extract-plugin": "^2.7.5",
     "node-sass": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "resolve-url-loader": "^5.0.0",
@@ -65,11 +65,12 @@
     "d3": "^7.8.2",
     "date-fns": "^2.29.3",
     "esri-loader": "^3.7.0",
-    "gsx": "^1.1.2",
     "helper-toolkit-ts": "^1.1.14",
     "jsx": "^0.9.89",
     "jsx-runtime": "^1.2.0",
+    "minimist": "^1.2.8",
     "npm-check-updates": "^16.7.12",
+    "optimist": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
